[gd_scene load_steps=10 format=3 uid="uid://bbsqvqymrojj5"]

[ext_resource type="Script" path="res://scenes/common/level.gd" id="1_8vq8d"]
[ext_resource type="PackedScene" uid="uid://ceakiostnoxao" path="res://scenes/minor/hint/hint.tscn" id="2_5ps6b"]
[ext_resource type="PackedScene" uid="uid://bqlwentuopcga" path="res://scenes/minor/ui_stats/ui_stats.tscn" id="2_rdqft"]
[ext_resource type="PackedScene" uid="uid://k1n6mu3mhuut" path="res://enemies/ork/enemy.tscn" id="3_72mh5"]
[ext_resource type="Texture2D" uid="uid://c17d2n1jjcd8t" path="res://ui/icons/menu.svg" id="3_qnfjt"]
[ext_resource type="PackedScene" uid="uid://du20li6wou6fs" path="res://scenes/minor/message/message.tscn" id="4_1nbs4"]
[ext_resource type="PackedScene" uid="uid://bpv032thoan7a" path="res://scenes/minor/defeat_menu/defeat_menu.tscn" id="5_tbcgi"]
[ext_resource type="PackedScene" uid="uid://dqhv5ii03kgra" path="res://scenes/minor/victory_menu/victory_menu.tscn" id="6_r8y5h"]
[ext_resource type="PackedScene" uid="uid://sqtg0w21y043" path="res://scenes/minor/game_menu/game_menu.tscn" id="7_165x0"]

[node name="Level" type="Node2D"]
script = ExtResource("1_8vq8d")
hint_scene = ExtResource("2_5ps6b")
ork_scene = ExtResource("3_72mh5")
message_scene = ExtResource("4_1nbs4")
defeat_menu_scene = ExtResource("5_tbcgi")
victory_menu_scene = ExtResource("6_r8y5h")
game_menu_scene = ExtResource("7_165x0")

[node name="Tilemap" type="Node2D" parent="."]

[node name="Enemies" type="Node2D" parent="."]

[node name="Objects" type="Node2D" parent="."]

[node name="Towers" type="Node2D" parent="."]

[node name="UserInterface" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PlayerStats" parent="UserInterface" instance=ExtResource("2_rdqft")]

[node name="Menu" type="CanvasLayer" parent="UserInterface"]

[node name="Button" type="Button" parent="UserInterface/Menu"]
offset_left = 1232.0
offset_top = 16.0
offset_right = 1264.0
offset_bottom = 48.0
icon = ExtResource("3_qnfjt")

[connection signal="pressed" from="UserInterface/Menu/Button" to="." method="_on_menu_button_pressed"]
